--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,16 @@ services:
     env_file: docker.env
     command: npx prisma migrate deploy
 
-  # app:
-  #   build:
-  #     context: .
-  #     dockerfile: appDockerfile
-  #   env_file: docker.env
-  #   ports:
-  #     - '3000:3000'
-  #   depends_on:
-  #     - postgres
-  #     - minio
+  app:
+    build:
+      context: .
+      dockerfile: appDockerfile
+    env_file: docker.env
+    ports:
+      - '3000:3000'
+    depends_on:
+      - postgres
+      - minio
 
 
   postgres:
